lyricue (1:3.0.37-1) maverick; urgency=low

  * Fix application menu strings (LP#807237)

 -- Chris Debenham <chris@adebenham.com>  Sun, 10 Jul 2011 17:30:00 +1000

lyricue (1:3.0.36-1) maverick; urgency=low

  * Add local documentation

 -- Chris Debenham <chris@adebenham.com>  Sun, 10 Jul 2011 17:30:00 +1000

lyricue (1:3.0.35-1) maverick; urgency=medium

  * Fix build for maverick/lucid

 -- Chris Debenham <chris@adebenham.com>  Thu, 7 Jul 2011 17:30:00 +1000

lyricue (1:3.0.34-1) maverick; urgency=high

  * Fix audio volume (LP#806715)

 -- Chris Debenham <chris@adebenham.com>  Thu, 7 Jul 2011 17:30:00 +1000

lyricue (1:3.0.33-1) maverick; urgency=low

  * Make pressing enter in available songlist add song to playlist
    (makes interactive search work)
  * Enable videos to play for 3 seconds in miniview
  * Make shadow offset actually do something

 -- Chris Debenham <chris@adebenham.com>  Wed, 6 Jul 2011 17:30:00 +1000

lyricue (1:3.0.32-1) maverick; urgency=low

  * Handle symlinks properly when importing a directory
  * Allow pressing enter when searching for a song to add first match

 -- Chris Debenham <chris@adebenham.com>  Mon, 4 Jul 2011 17:30:00 +1000

lyricue (1:3.0.31-1) maverick; urgency=medium

  * Allow any image, video or music file to be added via 'add directory'
  * Sort list of song when importing
  * Fix for importing text songs with unicode

 -- Chris Debenham <chris@adebenham.com>  Sat, 2 Jul 2011 17:30:00 +1000

lyricue (1:3.0.30-1) maverick; urgency=medium

  * Fix looping of background videos
  * Fix progress bar for videos

 -- Chris Debenham <chris@adebenham.com>  Mon, 27 Jun 2011 17:30:00 +1000

lyricue (1:3.0.29-1) maverick; urgency=medium

  * Fix scaling on natty
  * Add support for importing pptx (via workaround)
  * Initial support for audio files in playlist

 -- Chris Debenham <chris@adebenham.com>  Mon, 27 Jun 2011 17:30:00 +1000

lyricue (1:3.0.28-1) maverick; urgency=medium
