@@ -1,8 +1,9 @@
 lyricue (1:3.0.37-1) maverick; urgency=low
 
   * Fix application menu strings (LP#807237)
+  * Make DVD playing actually play the selected title
 
- -- Chris Debenham <chris@adebenham.com>  Sun, 10 Jul 2011 17:30:00 +1000
+ -- Chris Debenham <chris@adebenham.com>  Mon, 11 Jul 2011 17:30:00 +1000
 
 lyricue (1:3.0.36-1) maverick; urgency=low
 
